--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,9 +1,10 @@
 [versions]
-agp = "8.7.1"
-coilCompose = "2.4.4"
+agp = "8.7.3"
+coilCompose = "2.7.0"
 coilComposeVersion = "3.0.3"
-coilKtCoilCompose = "2.6.0"
-converterScalars = "2.9.0"
+coilKtCoilCompose = "2.7.0"
+converterScalars = "2.11.0"
+coreKtxVersion = "1.15.0"
 gson = "2.11.0"
 kotlin = "2.0.0"
 coreKtx = "1.15.0"
@@ -12,11 +13,11 @@ junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 lifecycleRuntimeKtx = "2.8.7"
 activityCompose = "1.9.3"
-composeBom = "2024.04.01"
+composeBom = "2024.11.00"
 material3 = "1.3.1"
-material3Version = "1.1.1"
+material3Version = "1.3.1"
 navigationCompose = "2.8.4"
-okhttp = "4.11.0"
+okhttp = "4.12.0"
 playServicesFitness = "21.2.0"
 firebaseFirestoreKtx = "25.1.1"
 retrofit2KotlinxSerializationConverter = "1.0.0"
@@ -25,6 +26,7 @@ supportAnnotations = "28.0.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-core-ktx-v190 = { module = "androidx.core:core-ktx", version.ref = "coreKtxVersion" }
 androidx-material3-v111 = { module = "androidx.compose.material3:material3", version.ref = "material3Version" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
 androidx-room-guava = { module = "androidx.room:room-guava", version.ref = "roomRuntime" }
